updates to pom.xml and added a lot of javadoc